@@ -49,7 +49,7 @@ i3_add_library(phys-services
   private/phys-services/I3RandomService.cxx
   private/phys-services/I3GSLRandomService.cxx
   private/phys-services/I3GSLRandomServiceFactory.cxx
-  private/phys-services/I3MT19937.cxx
+  private/phys-services/I3MTRandomService.cxx
   private/phys-services/I3GeometryDecomposer.cxx
   private/phys-services/I3CutValues.cxx
   private/phys-services/I3ScaleCalculator.cxx
