@@ -1,22 +1,22 @@
 /**
- * @file I3MT19937.cxx
+ * @file I3MTRandomService.cxx
  * @copyright Copyright (c) 2017 The IceCube Collaboration
  * SPDX-License-Identifier: BSD-2-Clause
  * @author Kevin Meagher
  * @date December 2017
  */
-#include "phys-services/I3MT19937.h"
+#include "phys-services/I3MTRandomService.h"
 #include "dataclasses/I3String.h"
 
-I3MT19937::I3MT19937(){}
+I3MTRandomService::I3MTRandomService(){}
 
-I3MT19937::I3MT19937(uint32_t seed)
+I3MTRandomService::I3MTRandomService(uint32_t seed)
 {
   //set the initial state of the engine
   engine_.seed(seed);
 }
 
-I3MT19937::I3MT19937(std::vector<uint32_t> seed_vector)
+I3MTRandomService::I3MTRandomService(std::vector<uint32_t> seed_vector)
 {
   //generate a seed sequence from the initilization vector
   std::seed_seq seed(seed_vector.begin(),seed_vector.end());
@@ -24,25 +24,25 @@ I3MT19937::I3MT19937(std::vector<uint32_t> seed_vector)
   engine_.seed(seed);
 }
 
-I3FrameObjectPtr I3MT19937::GetState() const
+I3FrameObjectPtr I3MTRandomService::GetState() const
 {
   std::stringstream ss;
   ss << engine_;
   return I3StringPtr(new I3String(ss.str()));
 }
 
-void I3MT19937::RestoreState(I3FrameObjectConstPtr vstate)
+void I3MTRandomService::RestoreState(I3FrameObjectConstPtr vstate)
 {
   I3StringConstPtr s=(boost::dynamic_pointer_cast<const I3String>(vstate));
   std::stringstream ss(s->value);
   ss >> engine_;
 }
 
-I3MT19937::~I3MT19937(){}
+I3MTRandomService::~I3MTRandomService(){}
 
 // Service Factory
 
-I3MT19937Factory::I3MT19937Factory(const I3Context& context)
+I3MTRandomServiceFactory::I3MTRandomServiceFactory(const I3Context& context)
   : I3ServiceFactory(context)
 {
   AddParameter("Seed",
@@ -56,20 +56,20 @@ I3MT19937Factory::I3MT19937Factory(const I3Context& context)
 	       installServiceAs_);
 }
 
-I3MT19937Factory::~I3MT19937Factory(){}
+I3MTRandomServiceFactory::~I3MTRandomServiceFactory(){}
 
-void I3MT19937Factory::Configure()
+void I3MTRandomServiceFactory::Configure()
 {
   GetParameter("Seed", seed_vector_);
   GetParameter("InstallServiceAs",installServiceAs_);
 }
 
 bool
-I3MT19937Factory::InstallService(I3Context& services)
+I3MTRandomServiceFactory::InstallService(I3Context& services)
 {
   if(!random_)
-    random_ = I3RandomServicePtr(new I3MT19937(seed_vector_));
+    random_ = I3RandomServicePtr(new I3MTRandomService(seed_vector_));
   return services.Put<I3RandomService>(installServiceAs_, random_);
 }
 
-I3_SERVICE_FACTORY(I3MT19937Factory);
+I3_SERVICE_FACTORY(I3MTRandomServiceFactory);
