@@ -6,7 +6,7 @@
 
 import numpy as np
 from scipy import stats
-from icecube.phys_services import I3MT19937
+from icecube.phys_services import I3MTRandomService
 
 N=10000
 
@@ -15,8 +15,8 @@ seed_params = [(), (0,),([],),([0],),([0,0],),([0,0,0],)]
 
 for i in range(len(seed_params)):
     for j in range(i,len(seed_params)):
-        rng1 = I3MT19937(*seed_params[i])
-        rng2 = I3MT19937(*seed_params[j])
+        rng1 = I3MTRandomService(*seed_params[i])
+        rng2 = I3MTRandomService(*seed_params[j])
         sample1 = [ rng1.uniform(1) for x in range(N) ]
         sample2 = [ rng2.uniform(1) for x in range(N) ]
         r,p = stats.spearmanr(sample1,sample2)
