@@ -6,15 +6,15 @@
 
 import numpy as np
 from scipy import stats
-from icecube.phys_services import I3MT19937
+from icecube.phys_services import I3MTRandomService
 
 N=10000
 
-rng1 = I3MT19937([])
+rng1 = I3MTRandomService([])
 
 for z in range(100):
     state = rng1.state
-    rng2 =I3MT19937()
+    rng2 =I3MTRandomService()
     rng2.state = state
 
     sample1 =  [ rng1.uniform(1) for x in range(N) ]
